--- a/concordance/ch/ch-13.html
+++ b/concordance/ch/ch-13.html
@@ -1,73 +1,73 @@
 <html>
-    <head>
-        <meta charset=UTF-8>
-        <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css>
-        <style>
-            .table-container {
-                max-width: 1000px;
-                margin: 0 auto;
-            }
-            .has-background-rose {
-                background-color: #FFE7FE;
-            }
-        </style>
-    </head>
+        <head>
+            <meta charset=UTF-8>
+            <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css>
+            <style>
+                .table-container {
+                    max-width: 1000px;
+                    margin: 0 auto;
+                }
+                .has-background-rose {
+                    background-color: #FFE7FE;
+                }
+            </style>
+        </head>
 <body>
-    <div class=container>
-        <br/>
-        <table class="table table-striped-columns">
-            <thead>
-            <tr>
-                <th scope=col>Gauche</th>
-                <th scope=col>Mot</th>
-                <th scope=col>Droite</th>
-            </tr>
-            </thead>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
+        <div class=container>
+            <br/>
+            <table class="table table-striped-columns">
+                <thead>
+                <tr>
+                    <th scope=col>Gauche</th>
+                    <th scope=col>Mot</th>
+                    <th scope=col>Droite</th>
+                </tr>
+                </thead>
+<tr><td>何尊重一位</td><td>跨性别</td><td>者</td></tr>
+<tr><td>身边有人是</td><td>跨性别</td><td>者</td></tr>
+<tr><td>者不确定在</td><td>跨性别</td><td></td></tr>
+<tr><td>这篇文章里，“</td><td>跨性别</td><td>者</td></tr>
+<tr><td>人群中都有</td><td>跨性别</td><td></td></tr>
+<tr><td>背景里没有</td><td>跨性别</td><td>者。现在这</td></tr>
+<tr><td>有时候说清</td><td>跨性别</td><td>者的性别是</td></tr>
+<tr><td>因为”</td><td>跨性别</td><td>者不一样而</td></tr>
+<tr><td>重</td><td>跨性别</td><td>者</td></tr>
+<tr><td>因为很多</td><td>跨性别</td><td>者认为自己</td></tr>
+<tr><td>也可以问问</td><td>跨性别</td><td>者</td></tr>
+<tr><td>来指代一位</td><td>跨性别</td><td>者</td></tr>
+<tr><td>语言。问问</td><td>跨性别</td><td>者希望你用</td></tr>
+<tr><td>有一些</td><td>跨性别</td><td>者已经开始</td></tr>
+<tr><td>开自己是个</td><td>跨性别</td><td>者</td></tr>
+<tr><td>个人。虽然</td><td>跨性别</td><td>者可能是你</td></tr>
+<tr><td>定不是全部）</td><td>跨性别</td><td>者愿意回答</td></tr>
+<tr><td>尊重</td><td>跨性别</td><td>者的隐私。</td></tr>
+<tr><td>尊重</td><td>跨性别</td><td>者的隐私。</td></tr>
+<tr><td>泄露对方是</td><td>跨性别</td><td>者的身份。</td></tr>
+<tr><td>家自己是</td><td>跨性别</td><td>者是个非常</td></tr>
+<tr><td>所有的</td><td>跨性别</td><td>者。你要倾</td></tr>
+<tr><td>听说的某个</td><td>跨性别</td><td>者的经历一</td></tr>
+<tr><td>是这样的。</td><td>跨性别</td><td>者中有异性</td></tr>
+<tr><td>对</td><td>跨性别</td><td>者和普通人</td></tr>
+<tr><td>对</td><td>跨性别</td><td>者和普通人</td></tr>
+<tr><td>们。许多</td><td>跨性别</td><td>者仍然保持</td></tr>
+<tr><td>倾听。很多</td><td>跨性别</td><td>者生活在小</td></tr>
+<tr><td>认为</td><td>跨性别</td><td>者有某种</td></tr>
+<tr><td>不是所有的</td><td>跨性别</td><td>者都想做外</td></tr>
+<tr><td>不要问</td><td>跨性别</td><td>者的生殖器</td></tr>
+<tr><td>很多人认为“</td><td>跨性别</td><td></td></tr>
+<tr><td>也不能只用“</td><td>跨性别</td><td></td></tr>
+<tr><td>有些</td><td>跨性别</td><td>者愿意回答</td></tr>
+<tr><td>。如果一位</td><td>跨性别</td><td>者不愿意回</td></tr>
+<tr><td>例如</td><td>跨性别</td><td>者</td></tr>
+<tr><td>人认为对于</td><td>跨性别</td><td>者</td></tr>
+<tr><td>协会和世界</td><td>跨性别</td><td>者健康专业</td></tr>
+<tr><td>都有</td><td>跨性别</td><td>者小组</td></tr>
+<tr><td>或其他关于</td><td>跨性别</td><td>的版面</td></tr>
+<tr><td>不要和一位</td><td>跨性别</td><td>者说</td></tr>
+<tr><td>不是事实。</td><td>跨性别</td><td>者可以被理</td></tr>
+<tr><td>不要把</td><td>跨性别</td><td>者和顺性别</td></tr>
+<tr><td>就算你对</td><td>跨性别</td><td>者持有异议</td></tr>
+<tr><td>种处境对于</td><td>跨性别</td><td>者来说也很</td></tr>
+<tr><td>双性人也是</td><td>跨性别</td><td>者</td></tr>
+<tr><td>到某个人的</td><td>跨性别</td><td>是一种</td></tr>
+<tr><td>有些</td><td>跨性别</td><td>者会把</td></tr>
