--- a/concordance/ch/ch-18.html
+++ b/concordance/ch/ch-18.html
@@ -1,71 +1,71 @@
 <html>
-    <head>
-        <meta charset=UTF-8>
-        <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css>
-        <style>
-            .table-container {
-                max-width: 1000px;
-                margin: 0 auto;
-            }
-            .has-background-rose {
-                background-color: #FFE7FE;
-            }
-        </style>
-    </head>
+        <head>
+            <meta charset=UTF-8>
+            <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css>
+            <style>
+                .table-container {
+                    max-width: 1000px;
+                    margin: 0 auto;
+                }
+                .has-background-rose {
+                    background-color: #FFE7FE;
+                }
+            </style>
+        </head>
 <body>
-    <div class=container>
-        <br/>
-        <table class="table table-striped-columns">
-            <thead>
-            <tr>
-                <th scope=col>Gauche</th>
-                <th scope=col>Mot</th>
-                <th scope=col>Droite</th>
-            </tr>
-            </thead>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td>MTF（Male-to-Female，</td><td>跨性别</td><td></td></tr>
-<tr><td>FTM（Female-to-Male，</td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td>者KOL</td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
+        <div class=container>
+            <br/>
+            <table class="table table-striped-columns">
+                <thead>
+                <tr>
+                    <th scope=col>Gauche</th>
+                    <th scope=col>Mot</th>
+                    <th scope=col>Droite</th>
+                </tr>
+                </thead>
+<tr><td>是</td><td>跨性别</td><td>女性</td></tr>
+<tr><td>是</td><td>跨性别</td><td>女性</td></tr>
+<tr><td>他们被称为</td><td>跨性别</td><td>者</td></tr>
+<tr><td>他们被称为</td><td>跨性别</td><td>者</td></tr>
+<tr><td></td><td>跨性别</td><td>者在主流视</td></tr>
+<tr><td>是一位</td><td>跨性别</td><td>女性</td></tr>
+<tr><td>公开身份的</td><td>跨性别</td><td>女性</td></tr>
+<tr><td>蒂芙尼国际</td><td>跨性别</td><td>秀选</td></tr>
+<tr><td>目前最大的</td><td>跨性别</td><td>者选美大赛</td></tr>
+<tr><td>蒂芙尼国际</td><td>跨性别</td><td>秀在国内被</td></tr>
+<tr><td>也是一位</td><td>跨性别</td><td>女性。</td></tr>
+<tr><td>向网友求助</td><td>跨性别</td><td>者如何修改</td></tr>
+<tr><td>这可能才是</td><td>跨性别</td><td>群体在</td></tr>
+<tr><td>分标准提出，MTF（Male-to-Female，</td><td>跨性别</td><td></td></tr>
+<tr><td>名，FTM（Female-to-Male，</td><td>跨性别</td><td>男性</td></tr>
+<tr><td>难被看到的</td><td>跨性别</td><td>人群</td></tr>
+<tr><td>对很多</td><td>跨性别</td><td>者来说</td></tr>
+<tr><td>这样的</td><td>跨性别</td><td>者来说</td></tr>
+<tr><td>。对于</td><td>跨性别</td><td>者来说</td></tr>
+<tr><td>些</td><td>跨性别</td><td>的孩子被父</td></tr>
+<tr><td>年聚焦</td><td>跨性别</td><td>者的纪实短</td></tr>
+<tr><td>记录了几位</td><td>跨性别</td><td>者错位的人</td></tr>
+<tr><td>坦承自己是</td><td>跨性别</td><td>女性</td></tr>
+<tr><td>识到自己是</td><td>跨性别</td><td>者</td></tr>
+<tr><td>中一集讲到</td><td>跨性别</td><td>者与同性恋</td></tr>
+<tr><td>不是所有</td><td>跨性别</td><td>者都需要完</td></tr>
+<tr><td>每个</td><td>跨性别</td><td>者的性别焦</td></tr>
+<tr><td>比起很多</td><td>跨性别</td><td>者</td></tr>
+<tr><td>尽管中国对</td><td>跨性别</td><td>者的社会包</td></tr>
+<tr><td>了她这样的</td><td>跨性别</td><td>者一个容身</td></tr>
+<tr><td>也有</td><td>跨性别</td><td>者的专门秀</td></tr>
+<tr><td>却没有认可</td><td>跨性别</td><td>者的法律制</td></tr>
+<tr><td>一些</td><td>跨性别</td><td>者甚至会收</td></tr>
+<tr><td>这并不代表</td><td>跨性别</td><td>者在国内的</td></tr>
+<tr><td>有人得知她</td><td>跨性别</td><td>女</td></tr>
+<tr><td>关于</td><td>跨性别</td><td>者的视频</td></tr>
+<tr><td>了一个</td><td>跨性别</td><td>者</td></tr>
+<tr><td>的</td><td>跨性别</td><td>者成功修改</td></tr>
+<tr><td>间性人和</td><td>跨性别</td><td>者因其性少</td></tr>
+<tr><td>大部分普通</td><td>跨性别</td><td>者来说</td></tr>
+<tr><td>去寻找那些</td><td>跨性别</td><td>者的组织</td></tr>
+<tr><td>虽然也因</td><td>跨性别</td><td>身份</td></tr>
+<tr><td>但面对</td><td>跨性别</td><td>者的身份标</td></tr>
+<tr><td>她专注讲解</td><td>跨性别</td><td>者的知识</td></tr>
+<tr><td>虽然我是</td><td>跨性别</td><td></td></tr>
+<tr><td>子生成一个</td><td>跨性别</td><td></td></tr>
