--- a/concordance/ch/ch-23.html
+++ b/concordance/ch/ch-23.html
@@ -1,35 +1,35 @@
 <html>
-    <head>
-        <meta charset=UTF-8>
-        <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css>
-        <style>
-            .table-container {
-                max-width: 1000px;
-                margin: 0 auto;
-            }
-            .has-background-rose {
-                background-color: #FFE7FE;
-            }
-        </style>
-    </head>
+        <head>
+            <meta charset=UTF-8>
+            <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css>
+            <style>
+                .table-container {
+                    max-width: 1000px;
+                    margin: 0 auto;
+                }
+                .has-background-rose {
+                    background-color: #FFE7FE;
+                }
+            </style>
+        </head>
 <body>
-    <div class=container>
-        <br/>
-        <table class="table table-striped-columns">
-            <thead>
-            <tr>
-                <th scope=col>Gauche</th>
-                <th scope=col>Mot</th>
-                <th scope=col>Droite</th>
-            </tr>
-            </thead>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
+        <div class=container>
+            <br/>
+            <table class="table table-striped-columns">
+                <thead>
+                <tr>
+                    <th scope=col>Gauche</th>
+                    <th scope=col>Mot</th>
+                    <th scope=col>Droite</th>
+                </tr>
+                </thead>
+<tr><td>、双性恋、</td><td>跨性别</td><td>者和酷</td></tr>
+<tr><td>、双性恋、</td><td>跨性别</td><td>者和酷儿骄</td></tr>
+<tr><td>、双性恋、</td><td>跨性别</td><td>者和酷儿等</td></tr>
+<tr><td>长的公开的</td><td>跨性别</td><td>人士雷切尔</td></tr>
+<tr><td>对有色人种</td><td>跨性别</td><td>女性的暴力</td></tr>
+<tr><td>着力打击</td><td>跨性别</td><td>的年轻人。</td></tr>
+<tr><td>悲程度的对</td><td>跨性别</td><td>人的暴力</td></tr>
+<tr><td>对有色人种</td><td>跨性别</td><td>女性。我们</td></tr>
+<tr><td>包括爱国的</td><td>跨性别</td><td>美国人</td></tr>
+<tr><td>、双性恋、</td><td>跨性别</td><td>者和酷儿骄</td></tr>
