--- a/concordance/ch/ch-24.html
+++ b/concordance/ch/ch-24.html
@@ -1,219 +1,217 @@
 <html>
-    <head>
-        <meta charset=UTF-8>
-        <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css>
-        <style>
-            .table-container {
-                max-width: 1000px;
-                margin: 0 auto;
-            }
-            .has-background-rose {
-                background-color: #FFE7FE;
-            }
-        </style>
-    </head>
+        <head>
+            <meta charset=UTF-8>
+            <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css>
+            <style>
+                .table-container {
+                    max-width: 1000px;
+                    margin: 0 auto;
+                }
+                .has-background-rose {
+                    background-color: #FFE7FE;
+                }
+            </style>
+        </head>
 <body>
-    <div class=container>
-        <br/>
-        <table class="table table-striped-columns">
-            <thead>
-            <tr>
-                <th scope=col>Gauche</th>
-                <th scope=col>Mot</th>
-                <th scope=col>Droite</th>
-            </tr>
-            </thead>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td>400万</td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
+        <div class=container>
+            <br/>
+            <table class="table table-striped-columns">
+                <thead>
+                <tr>
+                    <th scope=col>Gauche</th>
+                    <th scope=col>Mot</th>
+                    <th scope=col>Droite</th>
+                </tr>
+                </thead>
+<tr><td>吾栖之肤：</td><td>跨性别</td><td>者的性别认</td></tr>
+<tr><td>。研究方向：</td><td>跨性别</td><td>研究、酷儿</td></tr>
+<tr><td>北京高校的</td><td>跨性别</td><td>者为研究对</td></tr>
+<tr><td>概括了</td><td>跨性别</td><td>者建构性别</td></tr>
+<tr><td>分析</td><td>跨性别</td><td>者改造</td></tr>
+<tr><td>构的意义。</td><td>跨性别</td><td>者改造身</td></tr>
+<tr><td>又体现了</td><td>跨性别</td><td>主体在建构</td></tr>
+<tr><td>吾栖之肤：</td><td>跨性别</td><td>者的性别认</td></tr>
+<tr><td>在中国大陆</td><td>跨性别</td><td>社群内几乎</td></tr>
+<tr><td>三次出逃的</td><td>跨性别</td><td>女孩向陈军</td></tr>
+<tr><td>了解到关于</td><td>跨性别</td><td>的知识</td></tr>
+<tr><td>置手术能让</td><td>跨性别</td><td>者</td></tr>
+<tr><td>重置手术的</td><td>跨性别</td><td>女性的故事</td></tr>
+<tr><td>到一些</td><td>跨性别</td><td>社群</td></tr>
+<tr><td>到一些有关</td><td>跨性别</td><td>医疗的信息</td></tr>
+<tr><td>和另外三名</td><td>跨性别</td><td>伙伴合租的</td></tr>
+<tr><td>谢米这样的</td><td>跨性别</td><td>者就在我们</td></tr>
+<tr><td>万</td><td>跨性别</td><td>者。由</td></tr>
+<tr><td>年中国</td><td>跨性别</td><td>群体生存现</td></tr>
+<tr><td>之二以上的</td><td>跨性别</td><td>者曾经历不</td></tr>
+<tr><td>年中国</td><td>跨性别</td><td>群体生存现</td></tr>
+<tr><td>是许多</td><td>跨性别</td><td>者形容自己</td></tr>
+<tr><td>实践。对于</td><td>跨性别</td><td>者来说</td></tr>
+<tr><td>中国大陆的</td><td>跨性别</td><td>高校学生在</td></tr>
+<tr><td>了</td><td>跨性别</td><td>主体的性别</td></tr>
+<tr><td>以及构成</td><td>跨性别</td><td>身份的历</td></tr>
+<tr><td>对于</td><td>跨性别</td><td>者来说意味</td></tr>
+<tr><td>二</td><td>跨性别</td><td>者经验研究</td></tr>
+<tr><td>“</td><td>跨性别</td><td></td></tr>
+<tr><td>学界针对</td><td>跨性别</td><td>者的研究主</td></tr>
+<tr><td>针对</td><td>跨性别</td><td>者的理论研</td></tr>
+<tr><td>二是针对</td><td>跨性别</td><td></td></tr>
+<tr><td>主要关注</td><td>跨性别</td><td>者的身份认</td></tr>
+<tr><td>外学界针对</td><td>跨性别</td><td>者的经验研</td></tr>
+<tr><td>分别是</td><td>跨性别</td><td>者身份认同</td></tr>
+<tr><td>与多元性，</td><td>跨性别</td><td>者在组织与</td></tr>
+<tr><td>以及对于</td><td>跨性别</td><td>者身份认同</td></tr>
+<tr><td>在对</td><td>跨性别</td><td>者身份认同</td></tr>
+<tr><td>了</td><td>跨性别</td><td>者多重身份</td></tr>
+<tr><td>学者则关注</td><td>跨性别</td><td>者的具身体</td></tr>
+<tr><td>对</td><td>跨性别</td><td>者在组织与</td></tr>
+<tr><td>持并强化了</td><td>跨性别</td><td>者的负面经</td></tr>
+<tr><td>包括</td><td>跨性别</td><td>罪犯被按照</td></tr>
+<tr><td>以及</td><td>跨性别</td><td>者在诸如公</td></tr>
+<tr><td>兴起的针对</td><td>跨性别</td><td>者身份认同</td></tr>
+<tr><td>量研究涉及</td><td>跨性别</td><td>者世</td></tr>
+<tr><td>社会公众对</td><td>跨性别</td><td>者的态度变</td></tr>
+<tr><td>方学界针对</td><td>跨性别</td><td>者的经验研</td></tr>
+<tr><td>国外学界对</td><td>跨性别</td><td>者的经验研</td></tr>
+<tr><td>针对</td><td>跨性别</td><td>者的定量研</td></tr>
+<tr><td>少数族裔</td><td>跨性别</td><td>女性以及年</td></tr>
+<tr><td>长的</td><td>跨性别</td><td>者的研究依</td></tr>
+<tr><td>外学界针对</td><td>跨性别</td><td>者的经验研</td></tr>
+<tr><td>不多的关注</td><td>跨性别</td><td>心理健康问</td></tr>
+<tr><td>行过长期的</td><td>跨性别</td><td>社群研究</td></tr>
+<tr><td>蕤在对台湾</td><td>跨性别</td><td>者</td></tr>
+<tr><td>访谈中发现，</td><td>跨性别</td><td>社群的成长</td></tr>
+<tr><td>这体现了</td><td>跨性别</td><td>者摸索、描</td></tr>
+<tr><td>视角引入对</td><td>跨性别</td><td>者的研究</td></tr>
+<tr><td>于</td><td>跨性别</td><td>者的意义</td></tr>
+<tr><td>研究关注了</td><td>跨性别</td><td>者与社会的</td></tr>
+<tr><td>性力量对于</td><td>跨性别</td><td>者身体、性</td></tr>
+<tr><td>管该研究对</td><td>跨性别</td><td>者性别认同</td></tr>
+<tr><td>和写作者对</td><td>跨性别</td><td>社群本身的</td></tr>
+<tr><td>文学界针对</td><td>跨性别</td><td>者的经验研</td></tr>
+<tr><td>中国大陆的</td><td>跨性别</td><td></td></tr>
+<tr><td>外学界针对</td><td>跨性别</td><td>者</td></tr>
+<tr><td>大学是许多</td><td>跨性别</td><td>者建构性别</td></tr>
+<tr><td>面由于大陆</td><td>跨性别</td><td>医疗体系的</td></tr>
+<tr><td>针对未成年</td><td>跨性别</td><td>者和性别非</td></tr>
+<tr><td>的</td><td>跨性别</td><td>者来说意味</td></tr>
+<tr><td>自我认同为</td><td>跨性别</td><td>者的学生为</td></tr>
+<tr><td>分析</td><td>跨性别</td><td>者建构性</td></tr>
+<tr><td>的实践之于</td><td>跨性别</td><td>者性别认同</td></tr>
+<tr><td>认同自己为</td><td>跨性别</td><td>者的过程</td></tr>
+<tr><td>在此过程中</td><td>跨性别</td><td>者进行的具</td></tr>
+<tr><td>基本能代表</td><td>跨性别</td><td>女性学生群</td></tr>
+<tr><td>身体与认同：</td><td>跨性别</td><td>者的具身实</td></tr>
+<tr><td>在</td><td>跨性别</td><td>者的性别认</td></tr>
+<tr><td>自我认同为</td><td>跨性别</td><td>者组成的社</td></tr>
+<tr><td>与</td><td>跨性别</td><td>身份之间的</td></tr>
+<tr><td>变或调整。</td><td>跨性别</td><td>者改造身体</td></tr>
+<tr><td>成为”</td><td>跨性别</td><td>即建构性别</td></tr>
+<tr><td>地参与建构</td><td>跨性别</td><td>者</td></tr>
+<tr><td>频繁出现在</td><td>跨性别</td><td>社群中的重</td></tr>
+<tr><td>本、文化与</td><td>跨性别</td><td>者身体的相</td></tr>
+<tr><td>在与</td><td>跨性别</td><td>相关时</td></tr>
+<tr><td>指的是</td><td>跨性别</td><td>者被视为与</td></tr>
+<tr><td>还指跨性别者的</td><td>跨性别</td><td></td></tr>
+<tr><td>年来由许多</td><td>跨性别</td><td>者</td></tr>
+<tr><td>精英教育的</td><td>跨性别</td><td>者</td></tr>
+<tr><td>多</td><td>跨性别</td><td>者会使用其</td></tr>
+<tr><td></td><td>跨性别</td><td>者在</td></tr>
+<tr><td>提及的、在</td><td>跨性别</td><td>社群中被广</td></tr>
+<tr><td>分析</td><td>跨性别</td><td>者改造</td></tr>
+<tr><td>别明显可见，</td><td>跨性别</td><td>主体的跨性</td></tr>
+<tr><td>服饰是许多</td><td>跨性别</td><td>女性通过改</td></tr>
+<tr><td>介绍自己为“</td><td>跨性别</td><td>女孩</td></tr>
+<tr><td>译为“</td><td>跨性别</td><td></td></tr>
+<tr><td>风顺。对于</td><td>跨性别</td><td>女性来说</td></tr>
+<tr><td>由于</td><td>跨性别</td><td>男性在接受</td></tr>
+<tr><td>阻断治疗的</td><td>跨性别</td><td>女性所经历</td></tr>
+<tr><td>在</td><td>跨性别</td><td>者改变呈现</td></tr>
+<tr><td>当</td><td>跨性别</td><td>者通过其他</td></tr>
+<tr><td>对话。许多</td><td>跨性别</td><td>女性的</td></tr>
+<tr><td>例如部分</td><td>跨性别</td><td>女性因其声</td></tr>
+<tr><td>并成为许多</td><td>跨性别</td><td>女性建构性</td></tr>
+<tr><td>针对</td><td>跨性别</td><td>者在改造</td></tr>
+<tr><td>许多</td><td>跨性别</td><td>者对</td></tr>
+<tr><td>就是说做</td><td>跨性别</td><td>女性吧</td></tr>
+<tr><td>她们认为</td><td>跨性别</td><td>者</td></tr>
+<tr><td>即</td><td>跨性别</td><td>者在建构</td></tr>
+<tr><td>大众对</td><td>跨性别</td><td>者具有单一</td></tr>
+<tr><td>刻板印象的</td><td>跨性别</td><td>好友</td></tr>
+<tr><td>们都强调了</td><td>跨性别</td><td>者为脱离曾</td></tr>
+<tr><td>能帮助许多</td><td>跨性别</td><td>者保持心理</td></tr>
+<tr><td>当被理解为</td><td>跨性别</td><td>者改造外身</td></tr>
+<tr><td>还是作为</td><td>跨性别</td><td>者应对性别</td></tr>
+<tr><td>期待的角色，</td><td>跨性别</td><td>者的</td></tr>
+<tr><td>许多</td><td>跨性别</td><td>者在决定进</td></tr>
+<tr><td>的</td><td>跨性别</td><td>者并不占少</td></tr>
+<tr><td>实践会减少</td><td>跨性别</td><td>者在生活中</td></tr>
+<tr><td>中的</td><td>跨性别</td><td>者的性</td></tr>
+<tr><td>如果要解释</td><td>跨性别</td><td>者追求</td></tr>
+<tr><td>的行动和</td><td>跨性别</td><td>社群内部对</td></tr>
+<tr><td>是在东亚的</td><td>跨性别</td><td>社群中流行</td></tr>
+<tr><td>的</td><td>跨性别</td><td>者</td></tr>
+<tr><td>，</td><td>跨性别</td><td>者进行的身</td></tr>
+<tr><td>当我们理解</td><td>跨性别</td><td>者</td></tr>
+<tr><td>离的是中国</td><td>跨性别</td><td>医疗体系</td></tr>
+<tr><td>完善的现实，</td><td>跨性别</td><td>者改造身体</td></tr>
+<tr><td>性别现象的“</td><td>跨性别</td><td></td></tr>
+<tr><td>治疗需求的</td><td>跨性别</td><td>者才能通</td></tr>
+<tr><td>指出，</td><td>跨性别</td><td>女性被鼓励</td></tr>
+<tr><td>历的</td><td>跨性别</td><td>者表示</td></tr>
+<tr><td>医生会将</td><td>跨性别</td><td>者的</td></tr>
+<tr><td>在</td><td>跨性别</td><td>社群内便流</td></tr>
+<tr><td>诊断。可见，</td><td>跨性别</td><td>者对呈现式</td></tr>
+<tr><td>意味着</td><td>跨性别</td><td>者能够在日</td></tr>
+<tr><td>并获得认可，</td><td>跨性别</td><td>者对</td></tr>
+<tr><td>体的实践使</td><td>跨性别</td><td>者在不断的</td></tr>
+<tr><td>仅在不同的</td><td>跨性别</td><td>个体间相</td></tr>
+<tr><td></td><td>跨性别</td><td>者呈现式的</td></tr>
+<tr><td>多地体现了</td><td>跨性别</td><td>者性别认同</td></tr>
+<tr><td>性别焦虑的</td><td>跨性别</td><td>者所采取的</td></tr>
+<tr><td>由此揭示</td><td>跨性别</td><td>者在性别认</td></tr>
+<tr><td>大部分医院，</td><td>跨性别</td><td>者只有开具</td></tr>
+<tr><td>即部分</td><td>跨性别</td><td>者所期待的</td></tr>
+<tr><td>在向我抱怨</td><td>跨性别</td><td>就医的不便</td></tr>
+<tr><td>网的普及和</td><td>跨性别</td><td>医疗体系的</td></tr>
+<tr><td>越来越多的</td><td>跨性别</td><td>青少年在网</td></tr>
+<tr><td>相应需求的</td><td>跨性别</td><td>者在了解到</td></tr>
+<tr><td>母对自己的</td><td>跨性别</td><td>孩子</td></tr>
+<tr><td>都无法接受，</td><td>跨性别</td><td>者向父母出</td></tr>
+<tr><td>母会强制将</td><td>跨性别</td><td>子女送入性</td></tr>
+<tr><td>由此可见，</td><td>跨性别</td><td>者的</td></tr>
+<tr><td>意味着</td><td>跨性别</td><td>者是珍妮丝</td></tr>
+<tr><td>包括认为</td><td>跨性别</td><td>者是现代医</td></tr>
+<tr><td>从者等等。</td><td>跨性别</td><td>者在难以获</td></tr>
+<tr><td>身视角来看，</td><td>跨性别</td><td>者改造</td></tr>
+<tr><td></td><td>跨性别</td><td>者对</td></tr>
+<tr><td>手术意愿的</td><td>跨性别</td><td>女性都</td></tr>
+<tr><td>的</td><td>跨性别</td><td>者需要自己</td></tr>
+<tr><td>未足够成熟，</td><td>跨性别</td><td>女性的阴道</td></tr>
+<tr><td>虽然改变了</td><td>跨性别</td><td>者的外生殖</td></tr>
+<tr><td>但</td><td>跨性别</td><td>者仍需要进</td></tr>
+<tr><td>具身实践让</td><td>跨性别</td><td>者的身体在</td></tr>
+<tr><td>。可见，</td><td>跨性别</td><td>者对</td></tr>
+<tr><td>在内的许多</td><td>跨性别</td><td>者对</td></tr>
+<tr><td>认为，</td><td>跨性别</td><td>者的情欲生</td></tr>
+<tr><td>由此可见，</td><td>跨性别</td><td>者</td></tr>
+<tr><td>和尚未承认</td><td>跨性别</td><td>者存在之合</td></tr>
+<tr><td>进入高校的</td><td>跨性别</td><td>者凭借各自</td></tr>
+<tr><td>对</td><td>跨性别</td><td>者建构性别</td></tr>
+<tr><td>元路径以及</td><td>跨性别</td><td>者的具身实</td></tr>
+<tr><td>首先，</td><td>跨性别</td><td>并非或至少</td></tr>
+<tr><td>形态的游戏，</td><td>跨性别</td><td>者会采取</td></tr>
+<tr><td>将</td><td>跨性别</td><td>者的具身实</td></tr>
+<tr><td>变的过程中，</td><td>跨性别</td><td>者可</td></tr>
+<tr><td>在此过程中，</td><td>跨性别</td><td>男性、跨性</td></tr>
+<tr><td>并不是所有</td><td>跨性别</td><td>者的选择</td></tr>
+<tr><td>性别焦虑的</td><td>跨性别</td><td>者</td></tr>
+<tr><td>在</td><td>跨性别</td><td>医疗体系不</td></tr>
+<tr><td>许多</td><td>跨性别</td><td>者在未成年</td></tr>
+<tr><td>对于成年的</td><td>跨性别</td><td>者</td></tr>
+<tr><td>术对于许多</td><td>跨性别</td><td></td></tr>
+<tr><td>伦理影响下，</td><td>跨性别</td><td>者对</td></tr>
+<tr><td>收入较低的</td><td>跨性别</td><td>者不得不因</td></tr>
+<tr><td>尽管</td><td>跨性别</td><td>者</td></tr>
+<tr><td>但</td><td>跨性别</td><td>者并非为其</td></tr>
+<tr><td>进入高校的</td><td>跨性别</td><td>者凭借其力</td></tr>
+<tr><td>同的过程使</td><td>跨性别</td><td>个体与其所</td></tr>
