--- a/concordance/ch/ch-25.html
+++ b/concordance/ch/ch-25.html
@@ -1,56 +1,56 @@
 <html>
-    <head>
-        <meta charset=UTF-8>
-        <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css>
-        <style>
-            .table-container {
-                max-width: 1000px;
-                margin: 0 auto;
-            }
-            .has-background-rose {
-                background-color: #FFE7FE;
-            }
-        </style>
-    </head>
+        <head>
+            <meta charset=UTF-8>
+            <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css>
+            <style>
+                .table-container {
+                    max-width: 1000px;
+                    margin: 0 auto;
+                }
+                .has-background-rose {
+                    background-color: #FFE7FE;
+                }
+            </style>
+        </head>
 <body>
-    <div class=container>
-        <br/>
-        <table class="table table-striped-columns">
-            <thead>
-            <tr>
-                <th scope=col>Gauche</th>
-                <th scope=col>Mot</th>
-                <th scope=col>Droite</th>
-            </tr>
-            </thead>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
+        <div class=container>
+            <br/>
+            <table class="table table-striped-columns">
+                <thead>
+                <tr>
+                    <th scope=col>Gauche</th>
+                    <th scope=col>Mot</th>
+                    <th scope=col>Droite</th>
+                </tr>
+                </thead>
+<tr><td>我所认识的</td><td>跨性别</td><td></td></tr>
+<tr><td>我世界上有</td><td>跨性别</td><td>这样的人。</td></tr>
+<tr><td>看到的</td><td>跨性别</td><td>就多了。</td></tr>
+<tr><td>的群里看到</td><td>跨性别</td><td>者</td></tr>
+<tr><td>再次是</td><td>跨性别</td><td>者</td></tr>
+<tr><td>对于非</td><td>跨性别</td><td>者</td></tr>
+<tr><td>困境。因为</td><td>跨性别</td><td>者要求变性</td></tr>
+<tr><td>始终没有对</td><td>跨性别</td><td>者有更多的</td></tr>
+<tr><td>出了两集以</td><td>跨性别</td><td>为主题的节</td></tr>
+<tr><td>光吸引到了</td><td>跨性别</td><td>者身上。</td></tr>
+<tr><td>知了。强迫</td><td>跨性别</td><td>者表现得更</td></tr>
+<tr><td>治疗来改变</td><td>跨性别</td><td>者是无效的</td></tr>
+<tr><td>同性恋还是</td><td>跨性别</td><td>的成因</td></tr>
+<tr><td>成孩子变成</td><td>跨性别</td><td>者</td></tr>
+<tr><td>多数</td><td>跨性别</td><td>者</td></tr>
+<tr><td>角度支持对</td><td>跨性别</td><td>者保</td></tr>
+<tr><td>年的性向和</td><td>跨性别</td><td>问</td></tr>
+<tr><td>己之前的在</td><td>跨性别</td><td>角度知识储</td></tr>
+<tr><td>疗人员认为</td><td>跨性别</td><td>是一种性别</td></tr>
+<tr><td>究做出结论：</td><td>跨性别</td><td>不是一种精</td></tr>
+<tr><td>和大众做个</td><td>跨性别</td><td>的科普吧。</td></tr>
+<tr><td>想改变这些</td><td>跨性别</td><td>个体。随便</td></tr>
+<tr><td>求制定针对</td><td>跨性别</td><td>者来访者心</td></tr>
+<tr><td>时看到世界</td><td>跨性别</td><td>健康职业组</td></tr>
+<tr><td>角度支持对</td><td>跨性别</td><td>者</td></tr>
+<tr><td>年的性向和</td><td>跨性别</td><td>问题</td></tr>
+<tr><td>双性恋、和</td><td>跨性别</td><td>坚实的工作</td></tr>
+<tr><td></td><td>跨性别</td><td>不再是一种</td></tr>
+<tr><td>障碍。许多</td><td>跨性别</td><td>者并</td></tr>
+<tr><td>认同自己为</td><td>跨性别</td><td>者并不是精</td></tr>
+<tr><td></td><td>跨性别</td><td>者</td></tr>
