--- a/concordance/ch/ch-26.html
+++ b/concordance/ch/ch-26.html
@@ -1,71 +1,71 @@
 <html>
-    <head>
-        <meta charset=UTF-8>
-        <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css>
-        <style>
-            .table-container {
-                max-width: 1000px;
-                margin: 0 auto;
-            }
-            .has-background-rose {
-                background-color: #FFE7FE;
-            }
-        </style>
-    </head>
+        <head>
+            <meta charset=UTF-8>
+            <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css>
+            <style>
+                .table-container {
+                    max-width: 1000px;
+                    margin: 0 auto;
+                }
+                .has-background-rose {
+                    background-color: #FFE7FE;
+                }
+            </style>
+        </head>
 <body>
-    <div class=container>
-        <br/>
-        <table class="table table-striped-columns">
-            <thead>
-            <tr>
-                <th scope=col>Gauche</th>
-                <th scope=col>Mot</th>
-                <th scope=col>Droite</th>
-            </tr>
-            </thead>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td>64%</td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
+        <div class=container>
+            <br/>
+            <table class="table table-striped-columns">
+                <thead>
+                <tr>
+                    <th scope=col>Gauche</th>
+                    <th scope=col>Mot</th>
+                    <th scope=col>Droite</th>
+                </tr>
+                </thead>
+<tr><td>“</td><td>跨性别</td><td>者</td></tr>
+<tr><td>原标题：“</td><td>跨性别</td><td>者</td></tr>
+<tr><td>“</td><td>跨性别</td><td>者</td></tr>
+<tr><td>一位</td><td>跨性别</td><td>者可能被识</td></tr>
+<tr><td>周岁以上</td><td>跨性别</td><td>者准备的</td></tr>
+<tr><td>美国</td><td>跨性别</td><td>者人数接近</td></tr>
+<tr><td>的说法，</td><td>跨性别</td><td>者对于不同</td></tr>
+<tr><td>成为</td><td>跨性别</td><td>者的方式并</td></tr>
+<tr><td>同时</td><td>跨性别</td><td>者对自己的</td></tr>
+<tr><td>非</td><td>跨性别</td><td>者而言</td></tr>
+<tr><td>对于</td><td>跨性别</td><td>者而言</td></tr>
+<tr><td>性恋、</td><td>跨性别</td><td>者等人群。</td></tr>
+<tr><td>认为自己是</td><td>跨性别</td><td>者</td></tr>
+<tr><td>并不是所有</td><td>跨性别</td><td>者都被认为</td></tr>
+<tr><td>着越来越多</td><td>跨性别</td><td>者分享他们</td></tr>
+<tr><td>自我意识。</td><td>跨性别</td><td>者可能是异</td></tr>
+<tr><td>许多</td><td>跨性别</td><td>者无法负担</td></tr>
+<tr><td>专业医师和</td><td>跨性别</td><td>者称为</td></tr>
+<tr><td>周岁以上</td><td>跨性别</td><td>者准备的</td></tr>
+<tr><td>是专门从事</td><td>跨性别</td><td>者语音和通</td></tr>
+<tr><td>们想像一下</td><td>跨性别</td><td>者的世界</td></tr>
+<tr><td>缺少人们对</td><td>跨性别</td><td>者激进行为</td></tr>
+<tr><td>许多</td><td>跨性别</td><td>者意识到他</td></tr>
+<tr><td>广泛地接受</td><td>跨性别</td><td>人群。</td></tr>
+<tr><td>通常</td><td>跨性别</td><td>者会更改自</td></tr>
+<tr><td></td><td>跨性别</td><td>者变性的至</td></tr>
+<tr><td>如果对</td><td>跨性别</td><td>者在电话里</td></tr>
+<tr><td>呼。大多数</td><td>跨性别</td><td>者更</td></tr>
+<tr><td>。但是一些</td><td>跨性别</td><td>者并不认可</td></tr>
+<tr><td>事实上成为</td><td>跨性别</td><td>者并不是一</td></tr>
+<tr><td>。</td><td>跨性别</td><td>者确实经历</td></tr>
+<tr><td>因为它会给</td><td>跨性别</td><td>者的生活带</td></tr>
+<tr><td>。研究表明，</td><td>跨性别</td><td>者面临着偏</td></tr>
+<tr><td>的</td><td>跨性别</td><td>者曾在工作</td></tr>
+<tr><td>的</td><td>跨性别</td><td>者曾在工作</td></tr>
+<tr><td>的</td><td>跨性别</td><td>者在校</td></tr>
+<tr><td>甚至</td><td>跨性别</td><td>者在使用洗</td></tr>
+<tr><td>受调者表示</td><td>跨性别</td><td>者应当使用</td></tr>
+<tr><td>受调者表示</td><td>跨性别</td><td>者应当使用</td></tr>
+<tr><td>允许</td><td>跨性别</td><td>学生使用与</td></tr>
+<tr><td>为</td><td>跨性别</td><td>学生在校生</td></tr>
+<tr><td>和其他因素，</td><td>跨性别</td><td>者自杀率非</td></tr>
+<tr><td>考虑过自杀，64%</td><td>跨性别</td><td>者曾经尝试</td></tr>
+<tr><td>对</td><td>跨性别</td><td>者的父母提</td></tr>
+<tr><td>孩子可能是</td><td>跨性别</td><td>者的父母应</td></tr>
+<tr><td>是否是</td><td>跨性别</td><td>者是一项挑</td></tr>
