--- a/concordance/ch/ch-30.html
+++ b/concordance/ch/ch-30.html
@@ -1,54 +1,54 @@
 <html>
-    <head>
-        <meta charset=UTF-8>
-        <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css>
-        <style>
-            .table-container {
-                max-width: 1000px;
-                margin: 0 auto;
-            }
-            .has-background-rose {
-                background-color: #FFE7FE;
-            }
-        </style>
-    </head>
+        <head>
+            <meta charset=UTF-8>
+            <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css>
+            <style>
+                .table-container {
+                    max-width: 1000px;
+                    margin: 0 auto;
+                }
+                .has-background-rose {
+                    background-color: #FFE7FE;
+                }
+            </style>
+        </head>
 <body>
-    <div class=container>
-        <br/>
-        <table class="table table-striped-columns">
-            <thead>
-            <tr>
-                <th scope=col>Gauche</th>
-                <th scope=col>Mot</th>
-                <th scope=col>Droite</th>
-            </tr>
-            </thead>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td>（trans</td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
+        <div class=container>
+            <br/>
+            <table class="table table-striped-columns">
+                <thead>
+                <tr>
+                    <th scope=col>Gauche</th>
+                    <th scope=col>Mot</th>
+                    <th scope=col>Droite</th>
+                </tr>
+                </thead>
+<tr><td></td><td>跨性别</td><td>运动员</td></tr>
+<tr><td>让</td><td>跨性别</td><td>运动员可以</td></tr>
+<tr><td>让</td><td>跨性别</td><td>运动员可以</td></tr>
+<tr><td>让</td><td>跨性别</td><td>运动员可以</td></tr>
+<tr><td>之声中文网）</td><td>跨性别</td><td>与体育的话</td></tr>
+<tr><td>专门为</td><td>跨性别</td><td>运动员设立</td></tr>
+<tr><td>是因为美国</td><td>跨性别</td><td>女性托马斯</td></tr>
+<tr><td>为是女性的</td><td>跨性别</td><td>人在力量和</td></tr>
+<tr><td>睾酮治疗后，</td><td>跨性别</td><td>女性在做俯</td></tr>
+<tr><td>会的第一位</td><td>跨性别</td><td></td></tr>
+<tr><td></td><td>跨性别</td><td>者</td></tr>
+<tr><td>会的第一位</td><td>跨性别</td><td>女性</td></tr>
+<tr><td>会的第一位</td><td>跨性别</td><td>女性</td></tr>
+<tr><td>禁止</td><td>跨性别</td><td>女性游泳运</td></tr>
+<tr><td>如果</td><td>跨性别</td><td>女性之前经</td></tr>
+<tr><td>对于</td><td>跨性别</td><td></td></tr>
+<tr><td>用于</td><td>跨性别</td><td>的球员</td></tr>
+<tr><td>一个</td><td>跨性别</td><td>女性可以参</td></tr>
+<tr><td>足协决定请</td><td>跨性别</td><td>等运动员自</td></tr>
+<tr><td>足协决定请</td><td>跨性别</td><td>等运动员自</td></tr>
+<tr><td>对</td><td>跨性别</td><td>女性运动</td></tr>
+<tr><td>说。将</td><td>跨性别</td><td>者</td></tr>
+<tr><td>关于</td><td>跨性别</td><td>的决定得到</td></tr>
+<tr><td>、双性恋、</td><td>跨性别</td><td>者、酷儿</td></tr>
+<tr><td>柏林, </td><td>跨性别</td><td></td></tr>
+<tr><td>狱如何对待</td><td>跨性别</td><td>囚犯</td></tr>
+<tr><td>但作为</td><td>跨性别</td><td>者</td></tr>
+<tr><td></td><td>跨性别</td><td>女子入围</td></tr>
+<tr><td>柏林, </td><td>跨性别</td><td></td></tr>
