--- a/concordance/ch/ch-31.html
+++ b/concordance/ch/ch-31.html
@@ -1,88 +1,88 @@
 <html>
-    <head>
-        <meta charset=UTF-8>
-        <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css>
-        <style>
-            .table-container {
-                max-width: 1000px;
-                margin: 0 auto;
-            }
-            .has-background-rose {
-                background-color: #FFE7FE;
-            }
-        </style>
-    </head>
+        <head>
+            <meta charset=UTF-8>
+            <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css>
+            <style>
+                .table-container {
+                    max-width: 1000px;
+                    margin: 0 auto;
+                }
+                .has-background-rose {
+                    background-color: #FFE7FE;
+                }
+            </style>
+        </head>
 <body>
-    <div class=container>
-        <br/>
-        <table class="table table-striped-columns">
-            <thead>
-            <tr>
-                <th scope=col>Gauche</th>
-                <th scope=col>Mot</th>
-                <th scope=col>Droite</th>
-            </tr>
-            </thead>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td>40万</td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
+        <div class=container>
+            <br/>
+            <table class="table table-striped-columns">
+                <thead>
+                <tr>
+                    <th scope=col>Gauche</th>
+                    <th scope=col>Mot</th>
+                    <th scope=col>Droite</th>
+                </tr>
+                </thead>
+<tr><td>中国</td><td>跨性别</td><td>女性的困境</td></tr>
+<tr><td>中国</td><td>跨性别</td><td>女性的困境</td></tr>
+<tr><td>对于中国的</td><td>跨性别</td><td>女性</td></tr>
+<tr><td>，</td><td>跨性别</td><td>的过程如同</td></tr>
+<tr><td>完成</td><td>跨性别</td><td>诊疗可能长</td></tr>
+<tr><td>电台采访的</td><td>跨性别</td><td>女性的叙述</td></tr>
+<tr><td>男性的</td><td>跨性别</td><td>女性的诊疗</td></tr>
+<tr><td>令给中国的</td><td>跨性别</td><td>女性制造了</td></tr>
+<tr><td>的</td><td>跨性别</td><td>女性告诉本</td></tr>
+<tr><td>作为一名</td><td>跨性别</td><td>女性</td></tr>
+<tr><td>就是</td><td>跨性别</td><td>诊断证明</td></tr>
+<tr><td>文中其余的</td><td>跨性别</td><td>活动人士一</td></tr>
+<tr><td>中国做一名</td><td>跨性别</td><td>女性</td></tr>
+<tr><td>诊疗的花销，</td><td>跨性别</td><td>过程还有其</td></tr>
+<tr><td>中国其他的</td><td>跨性别</td><td>女性</td></tr>
+<tr><td>法完成整个</td><td>跨性别</td><td>诊</td></tr>
+<tr><td>为男性的</td><td>跨性别</td><td>女性的诊疗</td></tr>
+<tr><td>本台采访的</td><td>跨性别</td><td>活动人士认</td></tr>
+<tr><td>项禁令针对</td><td>跨性别</td><td>群体</td></tr>
+<tr><td>了在中国的</td><td>跨性别</td><td>女性们的求</td></tr>
+<tr><td>了在中国的</td><td>跨性别</td><td>女性们的求</td></tr>
+<tr><td>深深影响了</td><td>跨性别</td><td>群体。</td></tr>
+<tr><td></td><td>跨性别</td><td>活动人士告</td></tr>
+<tr><td>媒体上一些</td><td>跨性别</td><td>女性发出了</td></tr>
+<tr><td></td><td>跨性别</td><td>女性提供住</td></tr>
+<tr><td>其他帮助的</td><td>跨性别</td><td>活动人士。</td></tr>
+<tr><td>中国对</td><td>跨性别</td><td>群体的接纳</td></tr>
+<tr><td>们更加认识</td><td>跨性别</td><td>群体面临的</td></tr>
+<tr><td>官方并没有</td><td>跨性别</td><td>群体的人数</td></tr>
+<tr><td>万</td><td>跨性别</td><td></td></tr>
+<tr><td>生们开设了</td><td>跨性别</td><td>门诊</td></tr>
+<tr><td>医院开设了</td><td>跨性别</td><td>门诊。</td></tr>
+<tr><td>但是</td><td>跨性别</td><td>人士表示他</td></tr>
+<tr><td>而被迫休学，</td><td>跨性别</td><td>的成年人很</td></tr>
+<tr><td>找到工作。</td><td>跨性别</td><td>人士表示他</td></tr>
+<tr><td>发布的全国</td><td>跨性别</td><td>健康调研报</td></tr>
+<tr><td>析人员发现</td><td>跨性别</td><td>群体的自杀</td></tr>
+<tr><td></td><td>跨性别</td><td>女性告诉本</td></tr>
+<tr><td></td><td>跨性别</td><td>女性通常在</td></tr>
+<tr><td>是为了应对</td><td>跨性别</td><td>青少年在没</td></tr>
+<tr><td>一些</td><td>跨性别</td><td>女性已经开</td></tr>
+<tr><td>是为了应对</td><td>跨性别</td><td>青少年在没</td></tr>
+<tr><td>一些</td><td>跨性别</td><td>女性已经开</td></tr>
+<tr><td>药物处方的</td><td>跨性别</td><td>女性仍能够</td></tr>
+<tr><td>在看到</td><td>跨性别</td><td>女性的身份</td></tr>
+<tr><td>很多</td><td>跨性别</td><td>人士倾向于</td></tr>
+<tr><td>中国</td><td>跨性别</td><td>女性转向了</td></tr>
+<tr><td>重置手术的</td><td>跨性别</td><td>女性</td></tr>
+<tr><td>对</td><td>跨性别</td><td>女性来说</td></tr>
+<tr><td>本台采访的</td><td>跨性别</td><td>女性表示</td></tr>
+<tr><td>一位</td><td>跨性别</td><td>女性</td></tr>
+<tr><td>自制药物的</td><td>跨性别</td><td>女性</td></tr>
+<tr><td>体帖子得知，</td><td>跨性别</td><td>女性面临的</td></tr>
+<tr><td>住在国外的</td><td>跨性别</td><td>活动人士。</td></tr>
+<tr><td>报道过一些</td><td>跨性别</td><td>女性为自己</td></tr>
+<tr><td>一名</td><td>跨性别</td><td>女性在成功</td></tr>
+<tr><td>中国的</td><td>跨性别</td><td>女性表示</td></tr>
+<tr><td>中国的</td><td>跨性别</td><td>女性表示</td></tr>
+<tr><td>一名</td><td>跨性别</td><td>女性在</td></tr>
+<tr><td>警告</td><td>跨性别</td><td>女性不要自</td></tr>
+<tr><td>网页罗列了</td><td>跨性别</td><td>女性被警方</td></tr>
+<tr><td>统计的</td><td>跨性别</td><td>自杀人</td></tr>
+<tr><td>中国</td><td>跨性别</td><td>女性的困境</td></tr>
