--- a/concordance/ch/ch-39.html
+++ b/concordance/ch/ch-39.html
@@ -1,60 +1,60 @@
 <html>
-    <head>
-        <meta charset=UTF-8>
-        <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css>
-        <style>
-            .table-container {
-                max-width: 1000px;
-                margin: 0 auto;
-            }
-            .has-background-rose {
-                background-color: #FFE7FE;
-            }
-        </style>
-    </head>
+        <head>
+            <meta charset=UTF-8>
+            <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css>
+            <style>
+                .table-container {
+                    max-width: 1000px;
+                    margin: 0 auto;
+                }
+                .has-background-rose {
+                    background-color: #FFE7FE;
+                }
+            </style>
+        </head>
 <body>
-    <div class=container>
-        <br/>
-        <table class="table table-striped-columns">
-            <thead>
-            <tr>
-                <th scope=col>Gauche</th>
-                <th scope=col>Mot</th>
-                <th scope=col>Droite</th>
-            </tr>
-            </thead>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
+        <div class=container>
+            <br/>
+            <table class="table table-striped-columns">
+                <thead>
+                <tr>
+                    <th scope=col>Gauche</th>
+                    <th scope=col>Mot</th>
+                    <th scope=col>Droite</th>
+                </tr>
+                </thead>
+<tr><td>隐形门”：</td><td>跨性别</td><td>者职场生存</td></tr>
+<tr><td>公司辞退的</td><td>跨性别</td><td>者</td></tr>
+<tr><td>是众多</td><td>跨性别</td><td>者的就业和</td></tr>
+<tr><td>布的一份《2017</td><td>跨性别</td><td>群体生存现</td></tr>
+<tr><td>报告》显示，</td><td>跨性别</td><td>群体失业率</td></tr>
+<tr><td>的</td><td>跨性别</td><td>者在工作</td></tr>
+<tr><td>很多</td><td>跨性别</td><td>者因为担心</td></tr>
+<tr><td>一位昆明的</td><td>跨性别</td><td>者说</td></tr>
+<tr><td></td><td>跨性别</td><td>社群</td></tr>
+<tr><td>人告诉记者，</td><td>跨性别</td><td>在定义上意</td></tr>
+<tr><td>因此</td><td>跨性别</td><td>者多少都会</td></tr>
+<tr><td>到了大多数</td><td>跨性别</td><td>者</td></tr>
+<tr><td>为什么很多</td><td>跨性别</td><td>者做了手术</td></tr>
+<tr><td>图白雨霏是</td><td>跨性别</td><td>社群中第一</td></tr>
+<tr><td>但仍有许多</td><td>跨性别</td><td>者在更改学</td></tr>
+<tr><td>依法变更的”，</td><td>跨性别</td><td>者在手术后</td></tr>
+<tr><td>和</td><td>跨性别</td><td>者的个人沟</td></tr>
+<tr><td>咨询中心的</td><td>跨性别</td><td>者受教育权</td></tr>
+<tr><td>在校的</td><td>跨性别</td><td>者会因此选</td></tr>
+<tr><td>就业障碍在</td><td>跨性别</td><td>者入职之后</td></tr>
+<tr><td>少有</td><td>跨性别</td><td>者会选择通</td></tr>
+<tr><td>年“</td><td>跨性别</td><td>就业歧视第</td></tr>
+<tr><td>先生是</td><td>跨性别</td><td>男性</td></tr>
+<tr><td>不认定为对</td><td>跨性别</td><td>身份的歧视</td></tr>
+<tr><td>发了公众对</td><td>跨性别</td><td>的关注</td></tr>
+<tr><td>刘明辉看来，</td><td>跨性别</td><td>者用法律来</td></tr>
+<tr><td>有不得歧视</td><td>跨性别</td><td>者性别认同</td></tr>
+<tr><td>这是众多</td><td>跨性别</td><td>者就业歧视</td></tr>
+<tr><td>我们理解‘</td><td>跨性别</td><td></td></tr>
+<tr><td>大类。</td><td>跨性别</td><td>者遭遇就业</td></tr>
+<tr><td>另一方面，</td><td>跨性别</td><td>者遭遇的就</td></tr>
+<tr><td>陈砾觉得，</td><td>跨性别</td><td>者的就业歧</td></tr>
+<tr><td>地鼓励其他</td><td>跨性别</td><td>伙伴</td></tr>
+<tr><td>她成立了</td><td>跨性别</td><td>的社群</td></tr>
+<tr><td>。白雨霏的</td><td>跨性别</td><td>身份、她的</td></tr>
