--- a/concordance/ch/ch-50.html
+++ b/concordance/ch/ch-50.html
@@ -1,49 +1,49 @@
 <html>
-    <head>
-        <meta charset=UTF-8>
-        <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css>
-        <style>
-            .table-container {
-                max-width: 1000px;
-                margin: 0 auto;
-            }
-            .has-background-rose {
-                background-color: #FFE7FE;
-            }
-        </style>
-    </head>
+        <head>
+            <meta charset=UTF-8>
+            <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css>
+            <style>
+                .table-container {
+                    max-width: 1000px;
+                    margin: 0 auto;
+                }
+                .has-background-rose {
+                    background-color: #FFE7FE;
+                }
+            </style>
+        </head>
 <body>
-    <div class=container>
-        <br/>
-        <table class="table table-striped-columns">
-            <thead>
-            <tr>
-                <th scope=col>Gauche</th>
-                <th scope=col>Mot</th>
-                <th scope=col>Droite</th>
-            </tr>
-            </thead>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
+        <div class=container>
+            <br/>
+            <table class="table table-striped-columns">
+                <thead>
+                <tr>
+                    <th scope=col>Gauche</th>
+                    <th scope=col>Mot</th>
+                    <th scope=col>Droite</th>
+                </tr>
+                </thead>
+<tr><td></td><td>跨性别</td><td>者的看法及</td></tr>
+<tr><td>银河伴侣的</td><td>跨性别</td><td>是完全不同</td></tr>
+<tr><td>可以称作是</td><td>跨性别</td><td>人士</td></tr>
+<tr><td>的伴侣就是</td><td>跨性别</td><td></td></tr>
+<tr><td>、</td><td>跨性别</td><td>者</td></tr>
+<tr><td>性恋群体外，</td><td>跨性别</td><td>人士也是长</td></tr>
+<tr><td>对</td><td>跨性别</td><td>人士的认知</td></tr>
+<tr><td>报》对</td><td>跨性别</td><td>人士的报道</td></tr>
+<tr><td></td><td>跨性别</td><td>人士</td></tr>
+<tr><td>变装者都是</td><td>跨性别</td><td>人士</td></tr>
+<tr><td>，“</td><td>跨性别</td><td></td></tr>
+<tr><td>缘化的状态，</td><td>跨性别</td><td>人士在《人</td></tr>
+<tr><td>中都是禁忌，</td><td>跨性别</td><td>就更是如此</td></tr>
+<tr><td>治化的年代，</td><td>跨性别</td><td>的表现也逃</td></tr>
+<tr><td>民日报》对</td><td>跨性别</td><td>人士的报道</td></tr>
+<tr><td>体现出将</td><td>跨性别</td><td>现象</td></tr>
+<tr><td>将</td><td>跨性别</td><td>表现看作一</td></tr>
+<tr><td>不仅将</td><td>跨性别</td><td>现象默认为</td></tr>
+<tr><td>规朝着保护</td><td>跨性别</td><td>人士权益的</td></tr>
+<tr><td>》在讨论</td><td>跨性别</td><td>人士时也逐</td></tr>
+<tr><td>对</td><td>跨性别</td><td>人士愈发接</td></tr>
+<tr><td>针对</td><td>跨性别</td><td>人士的社会</td></tr>
+<tr><td>舆论领域对</td><td>跨性别</td><td>人</td></tr>
+<tr><td>理解与保护</td><td>跨性别</td><td></td></tr>
