--- a/concordance/ch/ch-8.html
+++ b/concordance/ch/ch-8.html
@@ -1,109 +1,107 @@
 <html>
-    <head>
-        <meta charset=UTF-8>
-        <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css>
-        <style>
-            .table-container {
-                max-width: 1000px;
-                margin: 0 auto;
-            }
-            .has-background-rose {
-                background-color: #FFE7FE;
-            }
-        </style>
-    </head>
+        <head>
+            <meta charset=UTF-8>
+            <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css>
+            <style>
+                .table-container {
+                    max-width: 1000px;
+                    margin: 0 auto;
+                }
+                .has-background-rose {
+                    background-color: #FFE7FE;
+                }
+            </style>
+        </head>
 <body>
-    <div class=container>
-        <br/>
-        <table class="table table-striped-columns">
-            <thead>
-            <tr>
-                <th scope=col>Gauche</th>
-                <th scope=col>Mot</th>
-                <th scope=col>Droite</th>
-            </tr>
-            </thead>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
+        <div class=container>
+            <br/>
+            <table class="table table-striped-columns">
+                <thead>
+                <tr>
+                    <th scope=col>Gauche</th>
+                    <th scope=col>Mot</th>
+                    <th scope=col>Droite</th>
+                </tr>
+                </thead>
+<tr><td></td><td>跨性别</td><td>人群生存困</td></tr>
+<tr><td>原标题：</td><td>跨性别</td><td>人群生存困</td></tr>
+<tr><td>　　● </td><td>跨性别</td><td>者通常是指</td></tr>
+<tr><td>主要包括</td><td>跨性别</td><td>男性、跨性</td></tr>
+<tr><td>　　● </td><td>跨性别</td><td>人群所面临</td></tr>
+<tr><td>工作环境对</td><td>跨性别</td><td>者不友好</td></tr>
+<tr><td>的达到24.58%，</td><td>跨性别</td><td>女性面临的</td></tr>
+<tr><td>没有形成对</td><td>跨性别</td><td>人群的正确</td></tr>
+<tr><td>认识，</td><td>跨性别</td><td>者对于自身</td></tr>
+<tr><td>医疗救治的</td><td>跨性别</td><td>者会在网上</td></tr>
+<tr><td>疑因</td><td>跨性别</td><td>原因被公司</td></tr>
+<tr><td>案由立案的</td><td>跨性别</td><td>者就业权纠</td></tr>
+<tr><td>小马是一名</td><td>跨性别</td><td>者。对于她</td></tr>
+<tr><td>会更加接纳</td><td>跨性别</td><td>者。</td></tr>
+<tr><td>据了解，</td><td>跨性别</td><td>者通常是指</td></tr>
+<tr><td>主要包括</td><td>跨性别</td><td>男性</td></tr>
+<tr><td>、</td><td>跨性别</td><td>女性</td></tr>
+<tr><td>的人口是</td><td>跨性别</td><td>者。按比例</td></tr>
+<tr><td>的</td><td>跨性别</td><td>者约有</td></tr>
+<tr><td>报》记者对</td><td>跨性别</td><td>者面临的生</td></tr>
+<tr><td>　　</td><td>跨性别</td><td>者求职困难</td></tr>
+<tr><td>的</td><td>跨性别</td><td>身份。</td></tr>
+<tr><td>在</td><td>跨性别</td><td>者身份的背</td></tr>
+<tr><td>但因为</td><td>跨性别</td><td>的少数性</td></tr>
+<tr><td>是因为很多</td><td>跨性别</td><td>者根本走不</td></tr>
+<tr><td>一步。很多</td><td>跨性别</td><td>者面临</td></tr>
+<tr><td>外企工作的</td><td>跨性别</td><td>女性告诉《</td></tr>
+<tr><td>。她有一位</td><td>跨性别</td><td>朋友</td></tr>
+<tr><td>中国</td><td>跨性别</td><td>群体生存现</td></tr>
+<tr><td>示，</td><td>跨性别</td><td>人群所面临</td></tr>
+<tr><td>工作环境对</td><td>跨性别</td><td>者不友好的</td></tr>
+<tr><td>达到24.58%，</td><td>跨性别</td><td>女性面临的</td></tr>
+<tr><td>压力最大。</td><td>跨性别</td><td>人群中</td></tr>
+<tr><td>法庭的众多</td><td>跨性别</td><td>者基本都遭</td></tr>
+<tr><td>重置手术的</td><td>跨性别</td><td>女性告诉《</td></tr>
+<tr><td>　　</td><td>跨性别</td><td>人群在国内</td></tr>
+<tr><td>在受访的</td><td>跨性别</td><td>者中</td></tr>
+<tr><td>消除社会对</td><td>跨性别</td><td>的歧视。</td></tr>
+<tr><td>即</td><td>跨性别</td><td></td></tr>
+<tr><td>在读大四的</td><td>跨性别</td><td>女性</td></tr>
+<tr><td>报告》显示，</td><td>跨性别</td><td>人群辍学率</td></tr>
+<tr><td>大部分</td><td>跨性别</td><td>者都遭受过</td></tr>
+<tr><td>有</td><td>跨性别</td><td>者反映</td></tr>
+<tr><td>绝。甚至有</td><td>跨性别</td><td>者在向学校</td></tr>
+<tr><td>者调查发现，</td><td>跨性别</td><td>者尤其是跨</td></tr>
+<tr><td>　　“</td><td>跨性别</td><td>的身份特殊</td></tr>
+<tr><td>只有明确将</td><td>跨性别</td><td>者列为被保</td></tr>
+<tr><td>才能使</td><td>跨性别</td><td>者拥有真正</td></tr>
+<tr><td>对</td><td>跨性别</td><td>者的歧视和</td></tr>
+<tr><td>的框架之下，</td><td>跨性别</td><td>者权利经常</td></tr>
+<tr><td>关法律中对</td><td>跨性别</td><td>者的权益加</td></tr>
+<tr><td>受访的</td><td>跨性别</td><td>者中</td></tr>
+<tr><td>的</td><td>跨性别</td><td>者身份证件</td></tr>
+<tr><td>重建手术的</td><td>跨性别</td><td>者中</td></tr>
+<tr><td>家人支持的</td><td>跨性别</td><td>者自</td></tr>
+<tr><td>能完全接受</td><td>跨性别</td><td>孩子</td></tr>
+<tr><td>近六成的</td><td>跨性别</td><td>者</td></tr>
+<tr><td>知道身份的</td><td>跨性别</td><td>受访者</td></tr>
+<tr><td>超过四成的</td><td>跨性别</td><td>者在遭受父</td></tr>
+<tr><td>一部分</td><td>跨性别</td><td>者还被家人</td></tr>
+<tr><td>多</td><td>跨性别</td><td>者来说也很</td></tr>
+<tr><td>已明确指出，</td><td>跨性别</td><td>者在完成性</td></tr>
+<tr><td>心发布的《</td><td>跨性别</td><td>校园环境及</td></tr>
+<tr><td>示，</td><td>跨性别</td><td>人群仅有</td></tr>
+<tr><td>目前</td><td>跨性别</td><td>者面临的问</td></tr>
+<tr><td>由拒绝帮助</td><td>跨性别</td><td>者</td></tr>
+<tr><td>校也会阻碍</td><td>跨性别</td><td>者行使修改</td></tr>
+<tr><td>的</td><td>跨性别</td><td>受访者在申</td></tr>
+<tr><td>一位负责</td><td>跨性别</td><td>咨询热线的</td></tr>
+<tr><td>热线中很多</td><td>跨性别</td><td>者在</td></tr>
+<tr><td>没有形成对</td><td>跨性别</td><td>的正确认识</td></tr>
+<tr><td>，</td><td>跨性别</td><td>者对于自</td></tr>
+<tr><td>医疗救治的</td><td>跨性别</td><td>者会在网上</td></tr>
+<tr><td>于青少年的</td><td>跨性别</td><td>者在初期会</td></tr>
+<tr><td></td><td>跨性别</td><td>伙伴、前辈</td></tr>
+<tr><td>大多数的</td><td>跨性别</td><td>者并没有得</td></tr>
+<tr><td>不到支持的</td><td>跨性别</td><td>者</td></tr>
+<tr><td>但因缺乏对</td><td>跨性别</td><td>人士</td></tr>
+<tr><td>使</td><td>跨性别</td><td>者在修改学</td></tr>
+<tr><td>应明确针对</td><td>跨性别</td><td>群体的学籍</td></tr>
+<tr><td></td><td>跨性别</td><td>人士的受教</td></tr>
+<tr><td>正在阅读：</td><td>跨性别</td><td>人群生存困</td></tr>
