--- a/concordance/ch/ch-21.html
+++ b/concordance/ch/ch-21.html
@@ -1,51 +1,51 @@
 <html>
-    <head>
-        <meta charset=UTF-8>
-        <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css>
-        <style>
-            .table-container {
-                max-width: 1000px;
-                margin: 0 auto;
-            }
-            .has-background-rose {
-                background-color: #FFE7FE;
-            }
-        </style>
-    </head>
+        <head>
+            <meta charset=UTF-8>
+            <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css>
+            <style>
+                .table-container {
+                    max-width: 1000px;
+                    margin: 0 auto;
+                }
+                .has-background-rose {
+                    background-color: #FFE7FE;
+                }
+            </style>
+        </head>
 <body>
-    <div class=container>
-        <br/>
-        <table class="table table-striped-columns">
-            <thead>
-            <tr>
-                <th scope=col>Gauche</th>
-                <th scope=col>Mot</th>
-                <th scope=col>Droite</th>
-            </tr>
-            </thead>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
+        <div class=container>
+            <br/>
+            <table class="table table-striped-columns">
+                <thead>
+                <tr>
+                    <th scope=col>Gauche</th>
+                    <th scope=col>Mot</th>
+                    <th scope=col>Droite</th>
+                </tr>
+                </thead>
+<tr><td>#</td><td>跨性别</td><td></td></tr>
+<tr><td>歧视</td><td>跨性别</td><td>者的社会是</td></tr>
+<tr><td>一系列有关</td><td>跨性别</td><td>者的报导</td></tr>
+<tr><td>然这世界对</td><td>跨性别</td><td>者渐渐接纳</td></tr>
+<tr><td>但</td><td>跨性别</td><td>群体又是如</td></tr>
+<tr><td>别传统接纳</td><td>跨性别</td><td></td></tr>
+<tr><td>因此，</td><td>跨性别</td><td>群体在当今</td></tr>
+<tr><td>的同性恋、</td><td>跨性别</td><td>者等列入</td></tr>
+<tr><td>驱逐</td><td>跨性别</td><td>者。</td></tr>
+<tr><td>的态度。当</td><td>跨性别</td><td>者被贴上</td></tr>
+<tr><td>对</td><td>跨性别</td><td>族群的刻板</td></tr>
+<tr><td>社会空间的</td><td>跨性别</td><td>族群</td></tr>
+<tr><td>。因此对于</td><td>跨性别</td><td>族群也不容</td></tr>
+<tr><td>都对于这些</td><td>跨性别</td><td>族群採取不</td></tr>
+<tr><td>同性恋、</td><td>跨性别</td><td>族群才被平</td></tr>
+<tr><td>这些</td><td>跨性别</td><td>者不论在政</td></tr>
+<tr><td>这些</td><td>跨性别</td><td>者就如同纳</td></tr>
+<tr><td>价值。因此，</td><td>跨性别</td><td>族群才逐渐</td></tr>
+<tr><td>今日</td><td>跨性别</td><td>族群追求自</td></tr>
+<tr><td>太社会对于</td><td>跨性别</td><td>者仍</td></tr>
+<tr><td>不容于这些</td><td>跨性别</td><td>者了。</td></tr>
+<tr><td>要如何让</td><td>跨性别</td><td>群体能够获</td></tr>
+<tr><td>是</td><td>跨性别</td><td>者。但是风</td></tr>
+<tr><td>一本融汇了</td><td>跨性别</td><td>族群议题的</td></tr>
+<tr><td>小说。虽然</td><td>跨性别</td><td>者被社</td></tr>
+<tr><td>不论是否是</td><td>跨性别</td><td>者</td></tr>
