--- a/concordance/ch/ch-38.html
+++ b/concordance/ch/ch-38.html
@@ -1,62 +1,62 @@
 <html>
-    <head>
-        <meta charset=UTF-8>
-        <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css>
-        <style>
-            .table-container {
-                max-width: 1000px;
-                margin: 0 auto;
-            }
-            .has-background-rose {
-                background-color: #FFE7FE;
-            }
-        </style>
-    </head>
+        <head>
+            <meta charset=UTF-8>
+            <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css>
+            <style>
+                .table-container {
+                    max-width: 1000px;
+                    margin: 0 auto;
+                }
+                .has-background-rose {
+                    background-color: #FFE7FE;
+                }
+            </style>
+        </head>
 <body>
-    <div class=container>
-        <br/>
-        <table class="table table-striped-columns">
-            <thead>
-            <tr>
-                <th scope=col>Gauche</th>
-                <th scope=col>Mot</th>
-                <th scope=col>Droite</th>
-            </tr>
-            </thead>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td>40岁</td><td>跨性别</td><td></td></tr>
-<tr><td>16岁</td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
-<tr><td></td><td>跨性别</td><td></td></tr>
+        <div class=container>
+            <br/>
+            <table class="table table-striped-columns">
+                <thead>
+                <tr>
+                    <th scope=col>Gauche</th>
+                    <th scope=col>Mot</th>
+                    <th scope=col>Droite</th>
+                </tr>
+                </thead>
+<tr><td>欣琴是一名</td><td>跨性别</td><td>女性</td></tr>
+<tr><td>鞍华执导的</td><td>跨性别</td><td>剧情短</td></tr>
+<tr><td>帮助香港</td><td>跨性别</td><td>者重拾信</td></tr>
+<tr><td>岁</td><td>跨性别</td><td>女主角</td></tr>
+<tr><td>岁</td><td>跨性别</td><td>女主角</td></tr>
+<tr><td>钱拍了一部</td><td>跨性别</td><td>主题独立影</td></tr>
+<tr><td>。讲述两代</td><td>跨性别</td><td>女性经历的</td></tr>
+<tr><td>也是</td><td>跨性别</td><td>女性。</td></tr>
+<tr><td>一部真正由</td><td>跨性别</td><td>人士出演的</td></tr>
+<tr><td>我是一名</td><td>跨性别</td><td>女性</td></tr>
+<tr><td>讲述了两代</td><td>跨性别</td><td>女性</td></tr>
+<tr><td>同为</td><td>跨性别</td><td>女性拥有不</td></tr>
+<tr><td>部电影表达</td><td>跨性别</td><td>人士在当今</td></tr>
+<tr><td>都是真实的</td><td>跨性别</td><td>者的生活</td></tr>
+<tr><td>女生情结的</td><td>跨性别</td><td>女性</td></tr>
+<tr><td>部真正属于</td><td>跨性别</td><td>者的电影</td></tr>
+<tr><td>年前我做了</td><td>跨性别</td><td>手术后</td></tr>
+<tr><td>增强</td><td>跨性别</td><td>人士的信心</td></tr>
+<tr><td>主要是帮助</td><td>跨性别</td><td>者</td></tr>
+<tr><td>为</td><td>跨性别</td><td>人士录制六</td></tr>
+<tr><td>多观众了解</td><td>跨性别</td><td>者的生活</td></tr>
+<tr><td>最近有几部</td><td>跨性别</td><td>主题的电影</td></tr>
+<tr><td>演员去出演</td><td>跨性别</td><td>者</td></tr>
+<tr><td>一部真正由</td><td>跨性别</td><td>人士出演的</td></tr>
+<tr><td>中也是一名</td><td>跨性别</td><td>者。</td></tr>
+<tr><td>书之后想做</td><td>跨性别</td><td>手术</td></tr>
+<tr><td>成就了她的</td><td>跨性别</td><td>。</td></tr>
+<tr><td>还有很多</td><td>跨性别</td><td>的工作人员</td></tr>
+<tr><td>都是真实的</td><td>跨性别</td><td>者</td></tr>
+<tr><td></td><td>跨性别</td><td>者的重要界</td></tr>
+<tr><td>些人是一个</td><td>跨性别</td><td>男性</td></tr>
+<tr><td>或者</td><td>跨性别</td><td>女性。</td></tr>
+<tr><td>候我知道了“</td><td>跨性别</td><td></td></tr>
+<tr><td>上搜了很多</td><td>跨性别</td><td>相关的信息</td></tr>
+<tr><td>在香港，</td><td>跨性别</td><td>患者被认为</td></tr>
+<tr><td>会继续支持</td><td>跨性别</td><td>人士</td></tr>
+<tr><td>国人更了解</td><td>跨性别</td><td>人士</td></tr>
